--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "request-header-parser-microservice",
+  "name": "header-parser",
   "version": "0.0.2",
   "description": "API project for freeCodeCamp",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.1",
@@ -19,7 +19,7 @@
     "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
   },
   "homepage": "https://github.com/freeCodeCamp/boilerplate-project-headerparser#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
+  "author": "Luis Fernando Brito",
   "keywords": [
     "freeCodeCamp",
     "node",
